<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_images_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/are_you_sure_you_want_to_confirm_your_order"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/yes"
                app:cornerRadius="4dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/no"
                app:cornerRadius="4dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>