<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".presentation.ui.signin.SignInFragment">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:src="@drawable/ry_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_phone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/phone_number_til"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/blue"
        app:boxStrokeWidth="1dp"
        app:cursorColor="@color/blue"
        app:hintTextColor="@color/blue"
        app:prefixText="+998"
        app:prefixTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableEnd="@drawable/selector_ic_phone"
            android:fontFamily="@font/inter"
            android:inputType="phone"
            android:maxLength="12"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:hint="@string/password"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/blue"
        app:boxStrokeWidth="1dp"
        app:cursorColor="@color/blue"
        app:hintTextColor="@color/blue"
        app:passwordToggleDrawable="@drawable/selector_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#A1A1A1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/inter"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/inter_semibold"
        android:padding="14dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        app:cornerRadius="8dp" />

</LinearLayout>